fix: performance & correctness fixes across 6 files
- ExpressionEvaluator: cache compiled MVEL expressions (avoid Nx compile)
- JdbcExtractor: use cursorCol by name (not iterator position)
- JdbcExtractor: remove toLowerCase() on column names
- JoinProcessor: parameterized queries (fix SQL injection)
- CsvExtractor: streaming read via BufferedReader (not readAllLines)
- EtlApplication: @Scheduled eviction for InMemoryDataStore TTL