@@ -7,17 +7,12 @@ import com.generic.etl.extract.adapter.Extractor;
 import com.generic.etl.common.model.Row;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.core.RowMapper;
 
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
-/**
- * JDBC extraction using Spring JdbcTemplate.
- * For large tables, cursor-based pagination is used to avoid loading all rows into memory at once.
- */
 @Slf4j
 public class JdbcExtractor implements Extractor {
 
@@ -53,23 +48,21 @@ public class JdbcExtractor implements Extractor {
     private Stream<Row> extractWithCursor(JdbcTemplate jdbc, DataSourceConfig.JdbcDataSource ds) {
         String col = ds.getCursor().getColumn();
         int pageSize = ds.getCursor().getPageSize();
-        String baseSql = ds.getQuery();
-
-        // Build streaming iterator
-        return Stream.generate(new CursorSupplier(jdbc, baseSql, col, pageSize))
+        return Stream.generate(new CursorSupplier(jdbc, ds.getQuery(), col, pageSize))
                 .takeWhile(list -> !list.isEmpty())
                 .flatMap(List::stream);
     }
 
-    /** Lazily fetches pages from the database. */
     private static class CursorSupplier implements java.util.function.Supplier<List<Row>> {
         private final JdbcTemplate jdbc;
         private final String cursorSql;
+        private final String cursorCol;
         private Object lastCursor;
-        private int batchNo = 0;
+        private int batchNo;
 
         CursorSupplier(JdbcTemplate jdbc, String baseSql, String cursorCol, int pageSize) {
             this.jdbc = jdbc;
+            this.cursorCol = cursorCol;
             this.cursorSql = String.format(
                 "SELECT * FROM (%s) _c WHERE %s > ? ORDER BY %s FETCH FIRST %d ROWS ONLY",
                 baseSql, cursorCol, cursorCol, pageSize
@@ -81,7 +74,9 @@ public class JdbcExtractor implements Extractor {
             List<Map<String, Object>> rows = jdbc.queryForList(cursorSql, lastCursor);
             batchNo++;
             if (!rows.isEmpty()) {
-                lastCursor = rows.getLast().values().iterator().next(); // first column = cursor
+                // Extract cursor value by column name, not position
+                Map<String, Object> lastMap = rows.get(rows.size() - 1);
+                lastCursor = lastMap.get(cursorCol.toLowerCase());
                 log.debug("Cursor batch {}: {} rows, cursor={}", batchNo, rows.size(), lastCursor);
             }
             return rows.stream().map(JdbcExtractor::mapToRow).toList();
@@ -90,7 +85,7 @@ public class JdbcExtractor implements Extractor {
 
     static Row mapToRow(Map<String, Object> map) {
         Map<String, Object> values = new LinkedHashMap<>();
-        map.forEach((k, v) -> values.put(k != null ? k.toLowerCase() : k, v));
+        map.forEach((k, v) -> values.put(k, v));
         return new Row(values);
     }
 }
